# Ray-Tracing-Cpp

./: .gitignore  CMakeLists.txt  README.md
CMakeProject3/: CMakeLists.txt  bsdf.h  camera.h  hittable.h  hittable_list.h  implementation.h  integrator.h  interval.h  light.h  main.cpp  material.h  matrix.h  mesh.h  ray.h  rtweekend.h  scene.h  sphere.h  texture.h  tiny_obj_loader.h  triangle.h  vec3.h
models/: Hygieia-in-a-room.mtl  Hygieia_C.mtl
